# ftree

./: CMakeLists.txt  Makefile  README.md
src/: argparser.c  argparser.h  bool.h  colors.h  dynamic_array.c  dynamic_array.h  main.c  tree.c  tree.h
